# spain_asylum_bot

./: .replit  asylum_bot.py  asylum_bot_requests.py  asylum_bot_selenium.py  main.py  main_selenium.py  pyproject.toml  replit.md  telegram_notifier.py  test_async_retry.py  test_complete_system.py  test_telegram.py
attached_assets/: Pasted-I-want-you-to-build-a-Python-bot-using-Playwright-that-automatically-checks-for-available-asyl-1753879875529_1753879875531.txt
